# IDLL-Loader

./: .gitignore  CMakeLists.txt  CMakePresets.json  IDL.sln  README.md  c_cpp_properties.json
IDL/: IDL.vcxproj
IDL/src/: globals.h  main.cpp
IDL/src/framework/: stdafx.h
